examples/test/testpolicy13731.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13731
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key35: value18
      key0: value6
      key44: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value5
          key29: value11
          key32: value15
      podSelector:
        matchLabels:
          key26: value7
          key16: value34
          key48: value44
